--- a/Bundler.toml
+++ b/Bundler.toml
@@ -1,6 +1,7 @@
 format_version = 2
 
-[apps.TestProgressApp]
+[apps.QtiEditor]
 identifier = 'com.example.QtiEditor'
 product = 'QtiEditor'
 version = '0.99.0'
+icon = "images/AppIcon Exports/AppIcon-macOS-Default-1024x1024@1x.png"
